# HMMAlign

./: .gitignore  CMakeLists.txt  README.md  check_bridge.py  check_bridge_buffer.py  check_bridge_long.py  check_bridge_middle.py  config.json  config.template.json  input.json  main.py  pyproject.toml  rebuild.sh  test_long_reads.py
results/: alignment.sam
src/: hmm_model.hpp  viterbi.cpp
